fix: fix line highlight when dark mode

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -54,7 +54,6 @@
 
   code {
     @apply font-mono;
-    @apply text-gray-700;
     font-size: 0.9em;
   }
 
@@ -103,6 +102,17 @@
   .myscroll::-webkit-scrollbar-thumb {
     border-radius: 5px;
     background-color: var(--ui-bg-accented);
+  }
+
+  a.link {
+    margin: 0 4px;
+    color: var(--color-primary-500);
+    text-decoration: none;
+    transition: 0.5s color;
+  }
+
+  a.link:hover {
+    color: var(--color-primary-700);
   }
 
   .spoiler {
